--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 DISCORD_TOKEN=MTE0OTM5MzYzNTk2ODgxNTExNA.Gq-rH-.9WlHBcLIRSB-HTUkHHt8AsCGJygmM__MorigRc
 DISCORD_SERVER=Odea
-
+DIFFUSION_KEY=sk-bfNiNjcIBW7mBfaQD3F0QecREG6tuuxiPxIrTjUvAqxUOECW
